--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr style="padding:0px">
             <p style="margin:20px 0 -5px 0px;text-align:center">
-              <name>Xuanbin Peng <ch_name>肖岸星</ch_name> </name>
+              <name>Xuanbin Peng <ch_name>彭宣滨</ch_name> </name>
               <br>
               <a class="clickable-text" onclick="pronounce()">Click to pronounce</a>
               <audio id="pronunciation">
