--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr style="padding:0px">
             <p style="margin:20px 0 -5px 0px;text-align:center">
-              <name>Xuanbin Peng <ch_name>肖岸星</ch_name> </name>
+              <name>Xuanbin Peng <ch_name>彭宣滨</ch_name> </name>
               <br>
               <a class="clickable-text" onclick="pronounce()">Click to pronounce</a>
               <audio id="pronunciation">
@@ -35,7 +35,7 @@
                 }
               </script>
               <br>
-              <strong>Email</strong>: anxingxiao [at] u.nus.edu  &nbsp  <strong>Office</strong>: COM3-B1-33
+              <strong>Email</strong>: 210320502 [at] stu.hit.edu.cn  &nbsp  <strong>Office</strong>: HITsz-G1001
             </p>
             
             
@@ -45,14 +45,24 @@
             </td>
             <td style="padding:2.5%;width:67%;vertical-align:middle">
               <p >
-                I am a first-year Ph.D. student at National University of Singapore in <a href="https://www.comp.nus.edu.sg/cs/">Department of Computer Science</a>. My research interest lies in the intersection of Robotics, Reasoning and Decision Making with their applications in complex, real-world environments.
+                I am a second-year undergraduate student at Harbin Institute of Technology, shenzhen in <a href="http://smea.hitsz.edu.cn/">Department of Mechatronic Engineering and Automation</a>,
+                 majoring in Automation. Successfully maintaining a 95.44/100 GPA, 
+                 I place as the second-ranked student among the 256 enrolled in my major, with several academic scholarship awarded, including the National Scholarship.
               </p>
               <p>
-                Previously, I worked as a Research Assistant with <a href='https://www.ee.cuhk.edu.hk/~qhmeng/about.html'>Prof. Max Q.-H. Meng </a>. Before that, I was a visiting student at UC Berkeley from Aug. 2019 to Sep. 2020 working with <a href='https://hybrid-robotics.berkeley.edu/koushil/'>Prof. Koushil Sreenath</a>. I received my B.E. in Automation from the Harbin Institute of Technology, Shenzhen in 2021.             
+                As an inquisitive individual with an insatiable thirst for scientific inquiry, I thoroughly relish plunging into scientific exploration 
+                especially in Robotics domain. My research interest lies in the intersection of robotics, perception, planning, reasoning, 
+                and decision-making, with their application in complex, real-world environments.
               </p>
               <p>
-                I love playing basketball 🏀 and table tennis 🏓 in my free time. I am also open to collaborating with people to explore the possibilities of robotics in various fields.
+                While I enjoy indulging in academic pursuits, I also appreciate letting loose by playing basketball🏀and table tennis🏓 during my spare time.
+                 Furthermore, philosophy and psychology also ignites a flame of curiosity within me.
               </p>
+              <p>
+                I remain open and eager to collaborate with like-minded individuals to discover the potential and posibilities of robotics across various fields.
+              </p>
+
+
               <p style="text-align:center">
                 <a href="data/CV_AnxingXiao.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=qrgIuiEAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
