--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 }
               </script>
               <br>
-              <strong>Email</strong>: 210320502 [at] stu.hit.edu.cn  &nbsp  <strong>Office</strong>: HITsz-G1001
+              <strong>Email</strong>: 210320502@stu.hit.edu.cn  &nbsp  <strong>Office</strong>: HITsz-G1001
             </p>
             
             
@@ -56,12 +56,11 @@
               </p>
               <p>
                 While I enjoy indulging in academic pursuits, I also appreciate letting loose by playing basketball🏀and table tennis🏓 during my spare time.
-                 Furthermore, philosophy and psychology also ignites a flame of curiosity within me.
+                Furthermore, philosophy and psychology also ignites a flame of curiosity within me.
               </p>
               <p>
                 I remain open and eager to collaborate with like-minded individuals to discover the potential and posibilities of robotics across various fields.
               </p>
-
 
               <p style="text-align:center">
                 <a href="data/CV_AnxingXiao.pdf">CV</a> &nbsp/&nbsp
@@ -534,3 +533,4 @@
 </body>
 
 </html>
+
