--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </p>
               <p>
                 While I enjoy indulging in academic pursuits, I also appreciate letting loose by playing basketball🏀and table tennis🏓 during my spare time.
-                Furthermore, philosophy and psychology also ignites a flame of curiosity within me.
+                Furthermore, philosophy and psychology also ignite a flame of curiosity within me.
               </p>
               <p>
                 I remain open and eager to collaborate with like-minded individuals to discover the potential and posibilities of robotics across various fields.
