--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 </style>
               </head>
 
-              <body>
+              <tbody>
                 <div id="slideshow">
                   <div class="slide active">
                     <img src="r_p/Pan/density1.png" alt="Image 1">
@@ -215,7 +215,7 @@
                     clearInterval(slideInterval);
                   });
                 </script>
-              </body>
+              </tbody>
 
 
             </tr>>
