first-Vision Done!

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Xuanbin Peng</title>
 
@@ -13,6 +12,13 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
   <link rel="icon" href="icon.png">
+ <!-- <style>
+		body {
+			background-color: #ffffff;
+		}
+
+	</style>
+-->
 </head>
 
 
@@ -84,12 +90,10 @@
                   </p>
 
                   <p style="text-align:center">
-                    <a href="data/CV_AnxingXiao.pdf">CV</a> &nbsp/&nbsp
-                    <a href="https://scholar.google.com/citations?user=qrgIuiEAAAAJ&hl=en">Google Scholar</a>
+                    <a href="data/CV_XuanbinPeng.pdf">CV</a> &nbsp/&nbsp
+                    <a href="https://peng-bryant.github.io/">Personal website</a>
                     &nbsp/&nbsp
-                    <a href="https://github.com/threefruits">Github</a> &nbsp/&nbsp
-                    <a href="https://twitter.com/anxingxiao">Twitter</a> &nbsp/&nbsp
-                    <a href="https://bigfive-test.com/result/622f8ea65f3b760009a78ab6">Personality</a>
+                    <a href="https://github.com/Peng-Bryant">Github</a> 
                   </p>
                 </td>
               </tr>
@@ -275,7 +279,7 @@
                 <script>
                   var slides = document.querySelectorAll('#slideshow .slide');
                   var currentSlide = 0;
-                  var slideInterval = setInterval(nextSlide, 1800);
+                  var slideInterval = setInterval(nextSlide, 3500);
 
                   function nextSlide() {
                     slides[currentSlide].className = 'slide';
@@ -448,7 +452,7 @@
                   <p style="margin:5px 0 5px 0px;font-size: 15px">
                     1. Decoupling visual error into linear/angular components with spherical projection model.</br>
                     2. Robust super-twisting observer for dynamic object velocities estimation without depth
-                    infomation.</br>
+                    information.</br>
                     3. Model Predictive Controller joint torques control for quadruped manipulator to track dynamic
                     targets.</br>
                   </p>
