--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               </script>
              -->
                   <br>
-                  <strong>Email</strong>: 210320502@stu.hit.edu.cn &nbsp <strong>Office</strong>: HITsz-G1001
+                  <strong>Email</strong>: xuanbin.peng@gmail.com &nbsp <strong>Office</strong>: HITsz-G1001
                 </p>
 
 
@@ -65,8 +65,7 @@
                 </td>
                 <td style="padding:2.5%;width:67%;vertical-align:middle">
                   <p>
-                    I am a second-year undergraduate student at Harbin Institute of Technology, shenzhen in <a
-                      href="http://smea.hitsz.edu.cn/">Department of Mechatronic Engineering and Automation</a>,
+                    I am a sophomore at   <a href="https://www.hitsz.edu.cn/">Harbin Institute of Technology, shenzhen</a>,
                     majoring in Automation. Successfully maintaining a GPA of 95.44/100 ,
                     I place as the second-ranked student among the 256 enrolled in my major, with several academic
                     scholarship awarded, including the National Scholarship.
@@ -92,8 +91,8 @@
                   <p style="text-align:center">
                     <a href="data/CV_XuanbinPeng.pdf">CV</a> &nbsp/&nbsp
                     <a href="https://peng-bryant.github.io/">Personal website</a>
-                    &nbsp/&nbsp
-                    <a href="https://github.com/Peng-Bryant">Github</a> 
+                    <!--&nbsp/&nbsp
+                    <a href="https://github.com/Peng-Bryant">Github</a> -->
                   </p>
                 </td>
               </tr>
@@ -587,6 +586,7 @@
                         Comprehensive Evaluation)</span><span>2021-2022</span></li>
                     <li><span>Pacemaker to Merit Student.</span><span>2022</span></li>
                     <li><span>Excellent League Member.</span><span>2022</span></li>
+                    <li><span>Excellent Student.</span><span>2023</span></li>
                     <li><span>"Mechatronics Orator" Speech Contest, <strong>Champion</strong></span><span>2022</span></li>
                     <!-- 在这里添加更多奖项和时间 -->
                   </ul>
@@ -607,12 +607,12 @@
                 <td style="padding:0px">
                   <!-- <br> -->
 
-
                   <p style="text-align:left;font-size:14px;">
                     Modified version of template from <a style="font-size:14px ;"
-                      href="https://jonbarron.info/">here</a>
+                      href="https://jonbarron.info/">Jon</a> and <a style="font-size:14px ;"
+                      href="https://anxingxiao.com/">AnXing Xiao</a>
                     <span style="float:right;">
-                      Last updated: 08 April 2023
+                      Last updated: 08 May 2023
                     </span>
                   </p>
 
