--- a/index.html
+++ b/index.html
@@ -252,12 +252,13 @@
                       I am always captivated by the starry night and the infinite universe.</h3>
                   </div>
 
-                  <!--领奖照片-->
+                  <!--领奖照片
                   <div class="slide">
                     <img src="photograph/L8.jpg" alt="Image 11">
                     <h3>During the ceremony, 
                       I was honored to receive the "Excellent Student" award as an outstanding representative.</h3>
                   </div>
+                  -->
 
                   <!--工程project-->
                   <div class="slide">
