--- a/index.html
+++ b/index.html
@@ -444,9 +444,9 @@
                   </script>
                 </td>
                 <td style="padding:20px;width:70%;vertical-align:middle">
-                  <!--Image-Based Visual Servoing for Tracking Dynamic Objects with Unknown Velocities using a
-                    Quadruped Manipulator-->
-                  <papertitle>Robot Manipulator (To be Replaced)
+                  <!--Robot Manipulator (To be Replaced)-->
+                  <papertitle>Image-Based Visual Servoing for Tracking Dynamic Objects with Unknown Velocities using a
+                    Quadruped Manipulator
                   </papertitle>
 
                   <p style="margin:5px 0 5px 0px;font-size: 15px">
