--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     an exchange student in Robotics at <strong>University of California, San Diego(UCSD)</strong>.
                     Previously, I was advised by
                     <a href="https://scholar.google.com/citations?hl=zh-CN&user=Dhnz264AAAAJ">Xiaogang Xiong</a> with
-                    some amazing works(see as follows).
+                    some amazing works(see below).
 
                     <!--Successfully maintaining a GPA of 95.44/100 ,
                     I place as the second-ranked student among the 256 enrolled in my major, with several academic
