--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                   <a href="https://ieeexplore.ieee.org/document/9159003">arXiv</a>
                   -->
                   <p style="font-size: 15px; margin: 2px 0;">
-                    Submitted for Review
+                    Under Review
                   </p>
                 </td>
 
@@ -217,7 +217,7 @@
                   <a href="https://ieeexplore.ieee.org/document/9159003">arXiv</a>
                   -->
                   <p style="font-size: 15px; margin: 2px 0;">
-                    Submitted for Review
+                    Under Review
                   </p>
                 </td>
 
