--- a/index.html
+++ b/index.html
@@ -315,8 +315,7 @@
 
                   <p style="margin:5px 0 5px 0px;font-size: 15px">
                     1. High-speed flight capabilities for fast moving objects targeting.</br>
-                    2. Vision-based automatic aiming and tracking system with high accuracy and robustness against
-                    interference.</br>
+                    2. Vision-based state estimation and feedback control with high accuracy and robustness against interference.</br>
                     3. Adaptive control algorithms for improved resilience and adaptability during flight and shooting
                     operations.</br>
                   </p>
@@ -352,8 +351,8 @@
                   <p style="margin:5px 0 5px 0px;font-size:15px">
                     This Project won the Second Prize in RoboMaster2022 Engineering-Mining-Challenge.</br>
                     1. Three-DOF suction gripper: Enhanced grasping flexibility and precision.</br>
-                    2. Multifunctionality: Versatile robot for various tasks and industries.</br>
-                    3. Vision-based alignment: Improved accuracy and efficiency in positioning.</br>
+                    2. Multifunctionality: Versatile robot for various tasks, like grasping and dragging.</br>
+                    3. Vision-based alignment: Improved accuracy and efficiency for manipulation tasks.</br>
                   </p>
 
                 </td>
@@ -464,8 +463,8 @@
 
                   <p style="margin:5px 0 5px 0px;font-size: 15px">
                     1. Hybrid legged-wheeled robot design for improved mobility and terrain adaptability.</br>
-                    2. Integration of LQR and VMC control methods for enhanced control performance.</br>
-                    3. Optimization of robot parameters for optimal efficiency and robustness.</br>
+                    2. Linear Quadratic Regulator (LQR) control methods for enhanced control performance.</br>
+                    3. Capable of demonstrating agility with various motions such as jumping and rotating.</br>
                   </p>
 
                 </td>
