--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     I am a junior student at <strong>Harbin Institute of Technology, shenzhen(HITSZ)</strong>,majoring
                     in <strong>Automation</strong>. Currently, I am
                     an exchange student in Robotics at <strong>University of California, San Diego(UCSD)</strong>.
-                    Previously, I was advised by
+                    Currently, I am doing research with <a href="https://xiaolonw.github.io/">Xiaolong Wang</a>.Prior to that, I was advised by
                     <a href="https://scholar.google.com/citations?hl=zh-CN&user=Dhnz264AAAAJ">Xiaogang Xiong</a> with
                     some amazing works(see below).
 
@@ -285,7 +285,7 @@
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
 
-
+<!--
               <tr onmouseout="RM2_stop()" onmouseover="RM2_start()">
                 <td style="padding:20px;width:30%;vertical-align:middle">
                   <div class="one">
@@ -322,7 +322,7 @@
 
                 </td>
               </tr>
-
+-->
               <tr onmouseout="RM1_stop()" onmouseover="RM1_start()">
                 <td style="padding:20px;width:30%;vertical-align:middle">
                   <div class="one">
@@ -435,6 +435,7 @@
                 </td>
               </tr>
 
+              <!--
               <tr onmouseout="RM3_stop()" onmouseover="RM3_start()">
                 <td style="padding:20px;width:30%;vertical-align:middle">
                   <div class="one">
@@ -472,7 +473,7 @@
 
             </tbody>
           </table>
-
+-->
 
 
           <br>
