[chore] minor change

--- a/index.html
+++ b/index.html
@@ -57,18 +57,15 @@
                   <strong>Email</strong>: xuanbin.peng@gmail.com &nbsp <strong>Office</strong>: HITsz-G1001
                 </p>
 
-
-
                 <td style="padding:2%;width:30%;max-width:33%">
                   <img style="width:100%;max-width:100%" alt="profile photo" src="images/head1.jpg"
                     class="hoverZoomLink">
                 </td>
                 <td style="padding:2.5%;width:67%;vertical-align:middle">
                   <p>
-                    I am a junior student at <strong>Harbin Institute of Technology, shenzhen(HITSZ)</strong>,majoring
+                    I am a junior student at <strong>Harbin Institute of Technology, shenzhen(HITSZ)</strong>, majoring
                     in <strong>Automation</strong>. Currently, I am
-                    an exchange student in Robotics at <strong>University of California, San Diego(UCSD)</strong>.
-                    Currently, I am doing research with <a href="https://xiaolonw.github.io/">Xiaolong Wang</a>.Prior to that, I was advised by
+                    a visiting student at <strong>University of California, San Diego(UCSD)</strong> advised by <a href="https://xiaolonw.github.io/">Xiaolong Wang</a>. Prior to that, I was advised by
                     <a href="https://scholar.google.com/citations?hl=zh-CN&user=Dhnz264AAAAJ">Xiaogang Xiong</a> with
                     some amazing works(see below).
 
