--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
                   <p>
                     I am a junior student at <strong>Harbin Institute of Technology, shenzhen(HITSZ)</strong>, majoring
                     in <strong>Automation</strong>. Currently, I am
-                    a visiting student at <strong>University of California, San Diego(UCSD)</strong> advised by <a href="https://xiaolonw.github.io/">Xiaolong Wang</a>. Prior to that, I was advised by
-                    <a href="https://scholar.google.com/citations?hl=zh-CN&user=Dhnz264AAAAJ">Xiaogang Xiong</a> with
-                    some amazing works(see below).
+                    a visiting student researcher at <strong>University of California, San Diego(UCSD)</strong> advised by <a href="https://xiaolonw.github.io/">Xiaolong Wang</a>. Prior to that, I was supervised by
+                    <a href="https://scholar.google.com/citations?hl=zh-CN&user=Dhnz264AAAAJ">Xiaogang Xiong</a> at HITsz.
 
                     <!--Successfully maintaining a GPA of 95.44/100 ,
                     I place as the second-ranked student among the 256 enrolled in my major, with several academic
@@ -156,7 +155,7 @@
 
                 <td style="padding: 20px; width: 70%; vertical-align: middle;">
                   <papertitle style="font-size: 17px; font-weight: bold; margin: 5px 0;">
-                    Semi-supervised Sim2real of Tactile Control Policies for Contact-Rich Manipulation Tasks
+                    RTTF: Rapid Tactile Transfer Framework for Contact-Rich Manipulation Tasks
                   </papertitle>
                   <p style="font-size: 15px; margin: 4px 0;">
                     Qiwei Wu*, <strong>Xuanbin Peng</strong>*, Jiayu Zhou, Zhouran Sun, Xiaogang Xiong and
@@ -167,8 +166,11 @@
                     and end-to-end privileged learning,
                     enabling improved data effiency and rapid adaptation across diverse tasks.
                   </p>
-                  <p style="font-size: 15px; margin: 2px 0;">
-                    <em>Under Review</em>
+                  <p style="font-size: 16px; margin: 2px 0;">
+                    <em>UIEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) 2024.</em>
+                  </p>
+                  <p style="font-size: 15px; margin: 2px 0; font-weight: bold;">
+                    Accepted
                   </p>
                 </td>
               </tr>
@@ -242,21 +244,23 @@
 
                  <td style="padding: 20px; width: 70%; vertical-align: middle;">
                   <papertitle style="font-size: 17px; font-weight: bold; margin: 5px 0;">
-                    Whole-body Compliant Control for Quadruped Manipulator with Torque Saturation
+                  Whole-body Compliance Control for Quadruped Manipulator with Actuation Saturation of Joint Torque and Ground Friction
                   </papertitle>
                   <p style="font-size: 15px; margin: 4px 0;">
-                    Tianlin Zhang, <strong>Xuanbin Peng</strong>, Sikai Guo, Xiaogang Xiong, Yang Bai, Ke Li, and
-                    Yunjiang Lou
+                  Tianlin Zhang, , Fenghao Lin, <strong>Xuanbin Peng</strong>, Xiaogang Xiong, and
+                  Yunjiang Lou
                   </p>
                   
                   <p style="margin:5px 0 5px 0px;font-size: 14px">
-                    Deploying Model Predictive Control and Whole Body Control(MPC-WBC) for Compliance 
-                    and Robustness in Whole-body Control of a Quadruped Manipulator.
+                  Deploying Model Predictive Control and Whole Body Control(MPC-WBC) for Compliance 
+                  and Robustness in Whole-body Control of a Quadruped Manipulator.
                   </p>
-                  <p style="font-size: 15px; margin: 2px 0;">
-                    <em>Under Review</em>
+                  <p style="font-size: 16px; margin: 2px 0;">
+                  <em>UIEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) 2024.</em>
                   </p>
-
+                  <p style="font-size: 15px; margin: 2px 0; font-weight: bold">
+                  Accepted, (Oral Presentation)
+                  </p>
               </tr>
             </tbody>
 
